--- a/theme.html
+++ b/theme.html
@@ -313,7 +313,21 @@
                 </li>
               </ul>
             </div>
-
+            <div class="search">
+              <script>
+  (function() {
+    var cx = '001434686932712560821:7e1xg0aqpiy';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+            </div>
             {% if site.tags %}
             <nav class="compositions">
                 <h4>Compositions</h4>
